--- a/.github/workflows/e2e-linux.yaml
+++ b/.github/workflows/e2e-linux.yaml
@@ -152,52 +152,50 @@ jobs:
         "${{ inputs.runner-type }}",
       ]
     steps:
+      - name: Set output variables to check AL2
+        id: linux2
+        run: |
+          is_al2=${{ (startsWith(inputs.os, 'amazon') && inputs.version == '2' ) }}
+          echo "is_al2=$is_al2" >> $GITHUB_OUTPUT
       - name: configure aws credentials
         uses: aws-actions/configure-aws-credentials@e3dd6a429d7300a6a4c196c26e071d42e0343502 # v4.0.2
-        if: >-
-          ${{ needs.test.outputs.has_creds == 'true'
-            && ((startsWith(inputs.os, 'amazon')
-            && inputs.version != '2' ))
+        if: |
+            steps.linux2.outputs.is_al2 == 'false'
+            && needs.test.outputs.has_creds == 'true'
             && github.event_name == 'pull_request'
             && github.event.action == 'closed'
             && github.event.pull_request.merged == true
-          }}
         with:
           role-to-assume: ${{ secrets.ROLE }}
           role-session-name: credhelper-test
           aws-region: ${{ secrets.REGION }}
       - name: download artifacts
         uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.08
-        if: >-
-          ${{ needs.test.outputs.has_creds == 'true'
-            && ((startsWith(inputs.os, 'amazon')
-            && inputs.version != '2' ))
+        if: |
+            steps.linux2.outputs.is_al2 == 'false'
+            && needs.test.outputs.has_creds == 'true'
             && github.event_name == 'pull_request'
             && github.event.action == 'closed'
             && github.event.pull_request.merged == true
-          }}
         with:
           name: linux-${{ inputs.version }}-${{ inputs.test-command }}-${{ inputs.arch }}-${{ github.run_id }}-${{ github.run_attempt }}-e2e-reports
           path: linux-${{ inputs.version }}-${{ inputs.test-command }}-${{ inputs.arch }}-${{ github.run_id }}-${{ github.run_attempt }}-e2e-reports
       - name: Display structure of downloaded files
-        if: >-
-          ${{ needs.test.outputs.has_creds == 'true'
-            && ((startsWith(inputs.os, 'amazon')
-            && inputs.version != '2' ))
+        if: |
+            steps.linux2.outputs.is_al2 == 'false'
+            && needs.test.outputs.has_creds == 'true'
             && github.event_name == 'pull_request'
             && github.event.action == 'closed'
             && github.event.pull_request.merged == true
-          }}
         run: ls -R linux-${{ inputs.version }}-${{ inputs.test-command }}-${{ inputs.arch }}-${{ github.run_id }}-${{ github.run_attempt }}-e2e-reports
       - name: Check and upload e2e tests reports to s3 bucket
-        if: >-
-          ${{ needs.test.outputs.has_creds == 'true'
-            && ((startsWith(inputs.os, 'amazon')
-            && inputs.version != '2' ))
+        if: |
+            steps.linux2.outputs.is_al2 == 'false'
+            && needs.test.outputs.has_creds == 'true'
             && github.event_name == 'pull_request'
             && github.event.action == 'closed'
             && github.event.pull_request.merged == true
-          }}
+
         run: |
           VM_REPORT="${{ github.workspace }}/linux-${{ inputs.version }}-${{ inputs.test-command }}-${{ inputs.arch }}-${{ github.run_id }}-${{ github.run_attempt }}-e2e-reports/${{ github.run_id }}-${{ github.run_attempt }}-e2e-vm-report.json"
           CONTAINER_REPORT="${{ github.workspace }}/linux-${{ inputs.version }}-${{ inputs.test-command }}-${{ inputs.arch }}-${{ github.run_id }}-${{ github.run_attempt }}-e2e-reports/${{ github.run_id }}-${{ github.run_attempt }}-e2e-container-report.json"
