--- a/.github/workflows/e2e-linux.yaml
+++ b/.github/workflows/e2e-linux.yaml
@@ -134,93 +134,23 @@ jobs:
         if: ${{ steps.vars.outputs.has_creds == 'true' && (!(startsWith(inputs.os, 'amazon') && inputs.version == '2' ))}}
         uses: actions/upload-artifact@65c4c4a1ddee5b72f698fdd19549f0f0fb45cf08 # v4.6.0
         with:
-          name: linux-${{ inputs.version }}-${{ inputs.test-command }}-${{ inputs.arch }}-${{ github.run_id }}-${{ github.run_attempt }}-e2e-reports
+          name: linux-${{ inputs.version }}-test-e2e-${{ inputs.arch }}-${{ github.run_id }}-${{ github.run_attempt }}-e2e-reports
           path: ${{ github.workspace }}/reports/${{ github.run_id }}-${{ github.run_attempt }}-*.json
       - name: Clean up repo AL2
         if: ${{ (startsWith(inputs.os, 'amazon') && inputs.version == '2' && always() ) }}
         run: |
           rm -rf "${GITHUB_WORKSPACE}"
-  upload-linux-e2e-test-report:
+  upload-e2e-test-reports:
     needs: test
     if: always()
-    runs-on:
-      [
-        "self-hosted",
-        "linux",
-        "${{ inputs.arch }}",
-        "${{ inputs.version }}",
-        "${{ inputs.runner-type }}",
-      ]
-    steps:
-      - name: Set output variables to check AL2
-        id: linux2
-        run: |
-          is_al2=${{ (startsWith(inputs.os, 'amazon') && inputs.version == '2' ) }}
-          echo "is_al2=$is_al2" >> $GITHUB_OUTPUT
-      - name: configure aws credentials
-        uses: aws-actions/configure-aws-credentials@4fc4975a852c8cd99761e2de1f4ba73402e44dd9 # v4.0.3
-        if: |
-            steps.linux2.outputs.is_al2 == 'false'
-            && needs.test.outputs.has_creds == 'true'
-            && github.event_name == 'pull_request'
-            && github.event.action == 'closed'
-            && github.event.pull_request.merged == true
-        with:
-          role-to-assume: ${{ secrets.ROLE }}
-          role-session-name: credhelper-test
-          aws-region: ${{ secrets.REGION }}
-      - name: download artifacts
-        uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.08
-        if: |
-            steps.linux2.outputs.is_al2 == 'false'
-            && needs.test.outputs.has_creds == 'true'
-            && github.event_name == 'pull_request'
-            && github.event.action == 'closed'
-            && github.event.pull_request.merged == true
-        with:
-          name: linux-${{ inputs.version }}-${{ inputs.test-command }}-${{ inputs.arch }}-${{ github.run_id }}-${{ github.run_attempt }}-e2e-reports
-          path: linux-${{ inputs.version }}-${{ inputs.test-command }}-${{ inputs.arch }}-${{ github.run_id }}-${{ github.run_attempt }}-e2e-reports
-      - name: Display structure of downloaded files
-        if: |
-            steps.linux2.outputs.is_al2 == 'false'
-            && needs.test.outputs.has_creds == 'true'
-            && github.event_name == 'pull_request'
-            && github.event.action == 'closed'
-            && github.event.pull_request.merged == true
-        run: ls -R linux-${{ inputs.version }}-${{ inputs.test-command }}-${{ inputs.arch }}-${{ github.run_id }}-${{ github.run_attempt }}-e2e-reports
-      - name: Check and upload e2e tests reports to s3 bucket
-        if: |
-            steps.linux2.outputs.is_al2 == 'false'
-            && needs.test.outputs.has_creds == 'true'
-            && github.event_name == 'pull_request'
-            && github.event.action == 'closed'
-            && github.event.pull_request.merged == true
-
-        run: |
-          VM_REPORT="${{ github.workspace }}/linux-${{ inputs.version }}-${{ inputs.test-command }}-${{ inputs.arch }}-${{ github.run_id }}-${{ github.run_attempt }}-e2e-reports/${{ github.run_id }}-${{ github.run_attempt }}-e2e-vm-report.json"
-          CONTAINER_REPORT="${{ github.workspace }}/linux-${{ inputs.version }}-${{ inputs.test-command }}-${{ inputs.arch }}-${{ github.run_id }}-${{ github.run_attempt }}-e2e-reports/${{ github.run_id }}-${{ github.run_attempt }}-e2e-container-report.json"
-          VM_SERIAL_REPORT="${{ github.workspace }}/linux-${{ inputs.version }}-${{ inputs.test-command }}-${{ inputs.arch }}-${{ github.run_id }}-${{ github.run_attempt }}-e2e-reports/${{ github.run_id }}-${{ github.run_attempt }}-e2e-vm-serial-report.json"
-
-          if [ -f "$VM_REPORT" ]; then
-            echo "VM report file exists. Uploading to S3..."
-            aws s3 cp "$VM_REPORT" "s3://finch-e2e-test-log-reports/linux-${{ inputs.arch }}/${{ needs.test.outputs.vm_report }}"
-            echo "VM report uploaded successfully."
-          else
-            echo "VM report file does not exist. Skipping upload."
-          fi
-
-          if [ -f "$CONTAINER_REPORT" ]; then
-            echo "Container report file exists. Uploading to S3..."
-            aws s3 cp "$CONTAINER_REPORT" "s3://finch-e2e-test-log-reports/linux-${{ inputs.arch }}/${{ needs.test.outputs.container_report }}"
-            echo "Container report uploaded successfully."
-          else
-            echo "Container report file does not exist. Skipping upload."
-          fi
-
-          if [ -f "$VM_SERIAL_REPORT" ]; then
-            echo "VM serial report file exists. Uploading to S3..."
-            aws s3 cp "$VM_SERIAL_REPORT" "s3://finch-e2e-test-log-reports/linux-${{ inputs.arch }}/${{ needs.test.outputs.vm_serial_report }}"
-            echo "VM serial report uploaded successfully."
-          else
-            echo "VM serial report file does not exist. Skipping upload."
-          fi
+    uses: ./.github/workflows/upload-test-report.yaml
+    secrets: inherit
+    with:
+      os: ${{ inputs.os }}
+      arch: ${{ inputs.arch }}
+      version: ${{ inputs.version }}
+      test-command: "test-e2e"
+      has-creds: ${{ needs.test.outputs.has_creds }}
+      vm_report: ${{ needs.test.outputs.vm_report }}
+      container_report: ${{ needs.test.outputs.container_report }}
+      vm_serial_report: ${{ needs.test.outputs.vm_serial_report }}
