--- a/.github/workflows/e2e-windows.yaml
+++ b/.github/workflows/e2e-windows.yaml
@@ -32,6 +32,11 @@ jobs:
         "${{ inputs.arch }}",
         "${{ inputs.runner-type }}",
       ]
+    outputs:
+      has_creds: ${{ steps.vars.outputs.has_creds}}
+      vm_report: ${{ steps.set-multiple-vars.outputs.VM_REPORT }}
+      container_report: ${{ steps.set-multiple-vars.outputs.CONTAINER_REPORT }}
+      vm_serial_report: ${{ steps.set-multiple-vars.outputs.VM_SERIAL_REPORT }}  
     steps:
       - name: Configure git CRLF settings
         run: |
@@ -101,7 +106,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@65c4c4a1ddee5b72f698fdd19549f0f0fb45cf08 # v4.6.0
         with:
-          name: windows-${{ inputs.test-command }}-${{ inputs.arch }}-${{ github.run_id }}-${{ github.run_attempt }}-e2e-reports
+          name: windows-${{ inputs.test-command }}-2022-${{ inputs.arch }}-${{ github.run_id }}-${{ github.run_attempt }}-e2e-reports
           path: ${{ github.workspace }}/reports/${{ github.run_id }}-${{ github.run_attempt }}-*.json
       - name: Remove Finch VM and Clean Up Previous Environment
         if: ${{ always() }}
@@ -111,64 +116,17 @@ jobs:
           make clean
           cd deps/finch-core && make clean
           exit 0 # Cleanup may set the exit code e.g. if a file doesn't exist; just ignore
-  upload-windows-e2e-test-report:
+  upload-e2e-test-reports:
     needs: test
     if: always()
-    timeout-minutes: 180
-    runs-on:
-      [
-        "self-hosted",
-        "windows",
-        "${{ inputs.arch }}",
-        "${{ inputs.runner-type }}",
-      ]
-    steps:
-      - name: Set output variables
-        id: vars
-        run: |
-          $has_creds="${{ github.repository == github.event.pull_request.head.repo.full_name && github.actor != 'dependabot[bot]' && github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true }}"
-          echo "has_creds=$has_creds" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append
-          exit 0 # if $has_creds is false, powershell will exit with code 1 and this step will fail
-      - name: configure aws credentials
-        uses: aws-actions/configure-aws-credentials@4fc4975a852c8cd99761e2de1f4ba73402e44dd9 # v4.0.3
-        if: env.has_creds == 'true'
-        with:
-          role-to-assume: ${{ secrets.ROLE }}
-          role-session-name: credhelper-test
-          aws-region: ${{ secrets.REGION }}
-      - name: download artifacts
-        uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.08
-        if: env.has_creds == 'true'
-        with:
-          name: windows-${{ inputs.test-command }}-${{ inputs.arch }}-${{ github.run_id }}-${{ github.run_attempt }}-e2e-reports
-          path: windows-${{ inputs.test-command }}-${{ inputs.arch }}-${{ github.run_id }}-${{ github.run_attempt }}-e2e-reports
-      - name: Check and upload e2e tests reports to s3 bucket
-        if: env.has_creds == 'true'
-        run: |
-          $env:VM_REPORT = "${{ github.workspace }}\windows-${{ inputs.test-command }}-${{ inputs.arch }}-${{ github.run_id }}-${{ github.run_attempt }}-e2e-reports\${{ github.run_id }}-${{ github.run_attempt }}-e2e-vm-report.json"
-          $env:CONTAINER_REPORT = "${{ github.workspace }}\windows-${{ inputs.test-command }}-${{ inputs.arch }}-${{ github.run_id }}-${{ github.run_attempt }}-e2e-reports\${{ github.run_id }}-${{ github.run_attempt }}-e2e-container-report.json"
-          $env:VM_SERIAL_REPORT = "${{ github.workspace }}\windows-${{ inputs.test-command }}-${{ inputs.arch }}-${{ github.run_id }}-${{ github.run_attempt }}-e2e-reports\${{ github.run_id }}-${{ github.run_attempt }}-e2e-vm-serial-report.json"
-
-          if (Test-Path $env:VM_REPORT) {
-            Write-Host "VM report file exists. Uploading to S3..."
-            aws s3 cp $env:VM_REPORT "s3://finch-e2e-test-log-reports/windows-${{ inputs.arch }}/${{ github.run_id }}-${{ github.run_attempt }}-e2e-vm-report.json"
-            Write-Host "VM report uploaded successfully."
-          } else {
-            Write-Host "VM report file does not exist. Skipping upload."
-          }
-
-          if (Test-Path $env:CONTAINER_REPORT) {
-            Write-Host "Container report file exists. Uploading to S3..."
-            aws s3 cp $env:CONTAINER_REPORT "s3://finch-e2e-test-log-reports/windows-${{ inputs.arch }}/${{ github.run_id }}-${{ github.run_attempt }}-e2e-container-report.json"
-            Write-Host "Container report uploaded successfully."
-          } else {
-            Write-Host "Container report file does not exist. Skipping upload."
-          }
-
-          if (Test-Path $env:VM_SERIAL_REPORT) {
-            Write-Host "VM serial report file exists. Uploading to S3..."
-            aws s3 cp $env:VM_SERIAL_REPORT "s3://finch-e2e-test-log-reports/windows-${{ inputs.arch }}/${{ github.run_id }}-${{ github.run_attempt }}-e2e-vm-serial-report.json"
-            Write-Host "VM serial report uploaded successfully."
-          } else {
-            Write-Host "VM serial report file does not exist. Skipping upload."
-          }
+    uses: ./.github/workflows/upload-test-report.yaml
+    secrets: inherit
+    with:
+      os: "windows"
+      arch: ${{ inputs.arch }}
+      version: "2022"
+      test-command: ${{ inputs.test-command }}
+      has-creds: ${{ needs.test.outputs.has_creds }}
+      vm_report: ${{ needs.test.outputs.vm_report }}
+      container_report: ${{ needs.test.outputs.container_report }}
+      vm_serial_report: ${{ needs.test.outputs.vm_serial_report }}
