--- a/.github/workflows/e2e-macos.yaml
+++ b/.github/workflows/e2e-macos.yaml
@@ -103,74 +103,17 @@ jobs:
         with:
           name: macos-${{ inputs.version }}-${{ inputs.test-command }}-${{ inputs.arch }}-${{ github.run_id }}-${{ github.run_attempt }}-e2e-reports
           path: ${{ github.workspace }}/reports/${{ github.run_id }}-${{ github.run_attempt }}-*.json
-  upload-macos-e2e-test-report:
+  upload-e2e-test-reports:
     needs: test
     if: always()
-    runs-on:
-      [
-        "self-hosted",
-        "macos",
-        "${{ inputs.arch }}",
-        "${{ inputs.version }}",
-        "${{ inputs.runner-type }}",
-      ]
-    timeout-minutes: 5
-    steps:
-      - name: configure aws credentials
-        uses: aws-actions/configure-aws-credentials@4fc4975a852c8cd99761e2de1f4ba73402e44dd9 # v4.0.3
-        if: |
-          needs.test.outputs.has_creds == 'true'
-          && github.event_name == 'pull_request'
-          && github.event.action == 'closed'
-          && github.event.pull_request.merged == true
-        with:
-          role-to-assume: ${{ secrets.ROLE }}
-          role-session-name: credhelper-test
-          aws-region: ${{ secrets.REGION }}
-      - name: download artifacts
-        uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.08
-        if: |
-          needs.test.outputs.has_creds == 'true'
-          && github.event_name == 'pull_request'
-          && github.event.action == 'closed'
-          && github.event.pull_request.merged == true
-        with:
-          name: macos-${{ inputs.version }}-${{ inputs.test-command }}-${{ inputs.arch }}-${{ github.run_id }}-${{ github.run_attempt }}-e2e-reports
-          path: macos-${{ inputs.version }}-${{ inputs.test-command }}-${{ inputs.arch }}-${{ github.run_id }}-${{ github.run_attempt }}-e2e-reports
-      - name: Display structure of downloaded files
-        if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true
-        run: ls -R macos-${{ inputs.version }}-${{ inputs.test-command }}-${{ inputs.arch }}-${{ github.run_id }}-${{ github.run_attempt }}-e2e-reports
-      - name: Check and upload e2e tests reports to s3 bucket
-        if: |
-          needs.test.outputs.has_creds == 'true'
-          && github.event_name == 'pull_request'
-          && github.event.action == 'closed'
-          && github.event.pull_request.merged == true
-        run: |
-          VM_REPORT="${{ github.workspace }}/macos-${{ inputs.version }}-${{ inputs.test-command }}-${{ inputs.arch }}-${{ github.run_id }}-${{ github.run_attempt }}-e2e-reports/${{ github.run_id }}-${{ github.run_attempt }}-e2e-vm-report.json"
-          CONTAINER_REPORT="${{ github.workspace }}/macos-${{ inputs.version }}-${{ inputs.test-command }}-${{ inputs.arch }}-${{ github.run_id }}-${{ github.run_attempt }}-e2e-reports/${{ github.run_id }}-${{ github.run_attempt }}-e2e-container-report.json"
-          VM_SERIAL_REPORT="${{ github.workspace }}/macos-${{ inputs.version }}-${{ inputs.test-command }}-${{ inputs.arch }}-${{ github.run_id }}-${{ github.run_attempt }}-e2e-reports/${{ github.run_id }}-${{ github.run_attempt }}-e2e-vm-serial-report.json"
-
-          if [ -f "$VM_REPORT" ]; then
-            echo "VM report file exists. Uploading to S3..."
-            aws s3 cp "$VM_REPORT" "s3://finch-e2e-test-log-reports/macos-${{ inputs.arch }}/${{ needs.test.outputs.vm_report }}"
-            echo "VM report uploaded successfully."
-          else
-            echo "VM report file does not exist. Skipping upload."
-          fi
-
-          if [ -f "$CONTAINER_REPORT" ]; then
-            echo "Container report file exists. Uploading to S3..."
-            aws s3 cp "$CONTAINER_REPORT" "s3://finch-e2e-test-log-reports/macos-${{ inputs.arch }}/${{ needs.test.outputs.container_report }}"
-            echo "Container report uploaded successfully."
-          else
-            echo "Container report file does not exist. Skipping upload."
-          fi
-
-          if [ -f "$VM_SERIAL_REPORT" ]; then
-            echo "VM serial report file exists. Uploading to S3..."
-            aws s3 cp "$VM_SERIAL_REPORT" "s3://finch-e2e-test-log-reports/macos-${{ inputs.arch }}/${{ needs.test.outputs.vm_serial_report }}"
-            echo "VM serial report uploaded successfully."
-          else
-            echo "VM serial report file does not exist. Skipping upload."
-          fi
+    uses: ./.github/workflows/upload-test-report.yaml
+    secrets: inherit
+    with:
+      os: "mac"
+      arch: ${{ inputs.arch }}
+      version: ${{ inputs.version }}
+      test-command: ${{ inputs.test-command }}
+      has-creds: ${{ needs.test.outputs.has_creds }}
+      vm_report: ${{ needs.test.outputs.vm_report }}
+      container_report: ${{ needs.test.outputs.container_report }}
+      vm_serial_report: ${{ needs.test.outputs.vm_serial_report }}
