chore: update golangci-lint to v2
Signed-off-by: Justin Alvarez <alvajus@amazon.com>

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -1,27 +1,4 @@
-# The sections in this file are ordered in the order presented in https://golangci-lint.run/usage/configuration/.
-# The nested fields are ordered alphabetically.
-
-linters-settings:
-  goheader:
-    template-path: copyright_header
-  goimports:
-    local-prefixes: github.com/runfinch/finch
-  gosec:
-    config:
-      G306: "0o644"
-  lll:
-    # 145 is just a lax value that does not require too much work to add this check,
-    # and we don't want this to be too strict anyway.
-    line-length: 145
-    tab-width: 4
-  makezero:
-    always: true
-  nolintlint:
-    require-explanation: true
-    require-specific: true
-  stylecheck:
-    # ST1003 is left out because it is a bit opinionated.
-    checks: ["all", "-ST1003"]
+version: "2"
 linters:
   enable:
     - copyloopvar
@@ -30,9 +7,7 @@ linters:
     - forcetypeassert
     - gocritic
     - godot
-    - gofumpt
     - goheader
-    - goimports
     - gosec
     - lll
     - makezero
@@ -45,21 +20,58 @@ linters:
     - predeclared
     - reassign
     - revive
+    - staticcheck
     - testableexamples
     - unconvert
     - unparam
     - usestdlibvars
     - wastedassign
     - whitespace
-    - stylecheck
+  settings:
+    goheader:
+      template-path: copyright_header
+    gosec:
+      config:
+        G306: "0o644"
+    lll:
+      # 145 is just a lax value that does not require too much work to add this check,
+      # and we don't want this to be too strict anyway.
+      line-length: 145
+      tab-width: 4
+    makezero:
+      always: true
+    nolintlint:
+      require-explanation: true
+      require-specific: true
+    staticcheck:
+      checks:
+        # ST1003 is left out because it is a bit opinionated.
+        - -ST1003
+        - all
+  exclusions:
+    generated: lax
+    rules:
+      - linters:
+          - lll
+        # A go:generate statement has to be in the same line: https://github.com/golang/go/issues/46050.  
+        source: '^//go:generate '
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
 issues:
-  exclude-rules:
-    - linters:
-        - lll
-      # A go:generate statement has to be in the same line: https://github.com/golang/go/issues/46050.
-      source: "^//go:generate "
-  # Some checks enabled in the stylecheck setting are disabled by default
-  # (e.g., https://golangci-lint.run/usage/false-positives/#exc0013),
-  # so we need to enable them explicitly here.
-  exclude-use-default: false
   fix: true
+formatters:
+  enable:
+    - gofumpt
+    - goimports
+  settings:
+    goimports:
+      local-prefixes:
+        - github.com/runfinch/finch
+  exclusions:
+    generated: lax
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
